// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reviews section Does not Render view all link 1`] = `
<div>
  <div
    class="css-ahmskn-SkeletonTheme"
  >
    <div
      style="position: fixed; z-index: 9999; top: 50px; left: 16px; right: 16px; bottom: 16px; pointer-events: none; max-width: 1200px; margin: 0px auto;"
    />
    <div
      data-testid="Reviews-section"
    >
      <div
        class="sc-hKwCoD gqXDbt"
      >
        <div
          class="sc-eCImvq fmqIj"
          color="textPrimary"
          font-size="4"
        >
          Reviews
        </div>
      </div>
      <div
        class="sc-hKwCoD gFGiLo"
        height="50"
      >
        No reviews available
      </div>
    </div>
  </div>
</div>
`;

exports[`Reviews section Render empty message if no data 1`] = `
<div>
  <div
    class="css-ahmskn-SkeletonTheme"
  >
    <div
      style="position: fixed; z-index: 9999; top: 50px; left: 16px; right: 16px; bottom: 16px; pointer-events: none; max-width: 1200px; margin: 0px auto;"
    />
    <div
      data-testid="Reviews-section"
    >
      <div
        class="sc-hKwCoD gqXDbt"
      >
        <div
          class="sc-eCImvq fmqIj"
          color="textPrimary"
          font-size="4"
        >
          Reviews
        </div>
      </div>
      <div
        class="sc-hKwCoD gFGiLo"
        height="50"
      >
        No reviews available
      </div>
    </div>
  </div>
</div>
`;

exports[`Reviews section Render view all link if totals reviews greater than 3 1`] = `
<div>
  <div
    class="css-ahmskn-SkeletonTheme"
  >
    <div
      style="position: fixed; z-index: 9999; top: 50px; left: 16px; right: 16px; bottom: 16px; pointer-events: none; max-width: 1200px; margin: 0px auto;"
    />
    <div
      data-testid="Reviews-section"
    >
      <div
        class="sc-hKwCoD gqXDbt"
      >
        <div
          class="sc-eCImvq fmqIj"
          color="textPrimary"
          font-size="4"
        >
          Reviews
        </div>
        <div
          class="sc-eCImvq fkgxFZ"
          color="secondary"
          font-size="1"
        >
          <a
            class="sc-jRQAMF Vchss"
            href="/link"
          >
            View all
          </a>
        </div>
      </div>
      <div
        class="sc-jeqYYF iPvZIX"
      >
        <div
          class="sc-hKwCoD cIVIRx"
        >
          <span>
            <span
              class="react-loading-skeleton sc-gKckTs fCGrse css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 40px; height: 40px; border-radius: 50%;"
            >
              ‌
            </span>
          </span>
          <span>
            <span
              class="react-loading-skeleton sc-gKckTs hLiuCk css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 150px; height: 20px;"
            >
              ‌
            </span>
          </span>
        </div>
        <span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-jeqYYF iPvZIX"
      >
        <div
          class="sc-hKwCoD cIVIRx"
        >
          <span>
            <span
              class="react-loading-skeleton sc-gKckTs fCGrse css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 40px; height: 40px; border-radius: 50%;"
            >
              ‌
            </span>
          </span>
          <span>
            <span
              class="react-loading-skeleton sc-gKckTs hLiuCk css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 150px; height: 20px;"
            >
              ‌
            </span>
          </span>
        </div>
        <span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-jeqYYF iPvZIX"
      >
        <div
          class="sc-hKwCoD cIVIRx"
        >
          <span>
            <span
              class="react-loading-skeleton sc-gKckTs fCGrse css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 40px; height: 40px; border-radius: 50%;"
            >
              ‌
            </span>
          </span>
          <span>
            <span
              class="react-loading-skeleton sc-gKckTs hLiuCk css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 150px; height: 20px;"
            >
              ‌
            </span>
          </span>
        </div>
        <span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton sc-gKckTs iffvqi css-1eg0sfo-skeletonStyles-Skeleton"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
